[gd_scene load_steps=14 format=3 uid="uid://d3tmj8avseoqn"]

[ext_resource type="Script" path="res://scenes/game/demon/demon.gd" id="1_gcahv"]
[ext_resource type="Texture2D" uid="uid://cn603iwy4wlyu" path="res://assets/demons/genders/male.png" id="2_f8blv"]
[ext_resource type="Texture2D" uid="uid://flpex7ihexjj" path="res://assets/tiles/01064-672545990-dark floor background with blood stains.png" id="2_v5gk0"]
[ext_resource type="Texture2D" uid="uid://dfgdkoorijh8" path="res://assets/demon.png" id="3_ey2in"]
[ext_resource type="Texture2D" uid="uid://oxd83wrolvei" path="res://assets/demons/genders/female.png" id="3_pnthn"]
[ext_resource type="Texture2D" uid="uid://25er4ht16vnw" path="res://assets/00698-3170758600-drawing of a skull, digital art, game asset.png" id="4_5jgmy"]
[ext_resource type="Texture2D" uid="uid://hrw1ofac5j78" path="res://assets/demons/genders/male_female.png" id="4_fmq23"]
[ext_resource type="Texture2D" uid="uid://cgkg76vn5cx1s" path="res://assets/00710-4029699230-drawing of a pentagram, digital art, game asset.png" id="5_yj6xy"]
[ext_resource type="PackedScene" uid="uid://xmbbar58v3fd" path="res://scenes/ui/souls_gather_container.tscn" id="6_4djce"]
[ext_resource type="Texture2D" uid="uid://br3bhpalcxcw5" path="res://assets/00690-2262657839-drawing of a heart, digital art, game asset.png" id="6_apg0x"]
[ext_resource type="Texture2D" uid="uid://chyx8gsyah2ww" path="res://assets/ring_color.png" id="7_m4tkl"]
[ext_resource type="Texture2D" uid="uid://gcctfb1h6uij" path="res://assets/demons/genders/undefined.png" id="8_2xhw6"]
[ext_resource type="Texture2D" uid="uid://qr14kucrashs" path="res://icon.svg" id="9_qjvih"]

[node name="Demon" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -332.0
offset_top = -358.0
offset_right = 188.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gcahv")
maleTexture = ExtResource("2_f8blv")
femaleTexture = ExtResource("3_pnthn")
hermaphroditeTexture = ExtResource("4_fmq23")
undefinedTexture = ExtResource("8_2xhw6")
soulsGatherScene = ExtResource("6_4djce")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
color = Color(0.666667, 0.666667, 0.666667, 0.501961)

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("2_v5gk0")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer2"]
visible = false
layout_mode = 2
text = "Special Rules"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 4

[node name="DemonTextureRect" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_ey2in")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DemonDescriptionLabel" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer2/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
text = "Description"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="SkullsVBoxContainer" type="HBoxContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/SkullsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("4_5jgmy")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/SkullsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("4_5jgmy")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/SkullsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("4_5jgmy")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/SkullsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("4_5jgmy")
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/SkullsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("4_5jgmy")
expand_mode = 1

[node name="TextureRect6" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/SkullsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("4_5jgmy")
expand_mode = 1

[node name="StarsVBoxContainer" type="HBoxContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect7" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/StarsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("5_yj6xy")
expand_mode = 1

[node name="TextureRect8" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/StarsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("5_yj6xy")
expand_mode = 1

[node name="TextureRect9" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/StarsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("5_yj6xy")
expand_mode = 1

[node name="TextureRect10" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/StarsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("5_yj6xy")
expand_mode = 1

[node name="TextureRect11" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/StarsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("5_yj6xy")
expand_mode = 1

[node name="TextureRect12" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/StarsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("5_yj6xy")
expand_mode = 1

[node name="HeartsVBoxContainer" type="HBoxContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="TextureRect13" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/HeartsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("6_apg0x")
expand_mode = 1

[node name="TextureRect14" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/HeartsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("6_apg0x")
expand_mode = 1

[node name="TextureRect15" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/HeartsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("6_apg0x")
expand_mode = 1

[node name="TextureRect16" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/HeartsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("6_apg0x")
expand_mode = 1

[node name="TextureRect17" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/HeartsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("6_apg0x")
expand_mode = 1

[node name="TextureRect18" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer2/HeartsVBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("6_apg0x")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Status:"

[node name="StatusLabel" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "In Hell"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DemonNameLabel" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Demon Name"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer"]
modulate = Color(0.345098, 0.345098, 0.345098, 1)
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("7_m4tkl")
expand_mode = 1
stretch_mode = 5

[node name="SexTextureRect" type="TextureRect" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("8_2xhw6")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Rank: "
horizontal_alignment = 1

[node name="RankLabel" type="Label" parent="MarginContainer2/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "47"
horizontal_alignment = 1

[node name="NotBattleReadyContainer" type="MarginContainer" parent="MarginContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer2/NotBattleReadyContainer"]
layout_mode = 2
color = Color(0.176471, 0.176471, 0.176471, 0.698039)

[node name="NotBattleReadyLabel" type="Label" parent="MarginContainer2/NotBattleReadyContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "In Battle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GatherHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 300
alignment = 1

[node name="SoulsGatherControl" type="Control" parent="GatherHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FavorsGatherControl" type="Control" parent="GatherHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(50, 50, 50, 1)
position = Vector2(80, 333)
texture = ExtResource("9_qjvih")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
